fix overflow on box

--- a/public/components/Box.scss
+++ b/public/components/Box.scss
@@ -5,6 +5,7 @@
   background-color: $color-white;
   margin: 1.5rem;
   padding: 1rem;
+  overflow-x: auto;
   @include rounded();
   @include shadow();
 
